syntax = "proto3";

package zksync.dal;

import "zksync/roles/validator.proto";

message ConsensusBlockFields {
  optional roles.validator.BlockHeaderHash parent = 1;
  optional roles.validator.CommitQC justification = 2;
}
